--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,342 @@
-//
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
+body {
+    font-family: "Sawarabi Gothic";
+}
+html {
+    min-height: 100vh;
+    position: relative;
+    padding-bottom: 75px; 
+}
+a {
+    color: #5384a2;
+}
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+img {
+    max-width: 100%;
+}
+.main-image {
+    text-align: center;
+}
+.sort {
+    text-align: right;
+}
+h2 {
+    font-size: 26px;
+}
+select {
+    padding: 5px 0;
+    vertical-align: middle;
+}
+header .bg-dark{
+    background-color: #8ba6b7!important;
+}
+.navbar-dark .navbar-nav .nav-link {
+    color: #fff!important;
+}
+.dropdown-item {
+    padding: 0;
+    a {
+        display: block;
+        padding: 0 10px;
+        &:hover {
+            background: #fff;
+            text-decoration: none;
+        }
+    }
+}
+.main-image {
+    text-align: center;
+    p {
+        font-size: 50px;
+    }
+    @media screen and (max-width: 834px) {
+        p {
+            font-size: 24px;
+        }
+    }
+}
+.review-list {
+    p {
+        font-size: 16px;
+    }
+}
+.tag-list {
+    display: flex;
+    li {
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        padding: 5px;
+        + li {
+            margin-left: 10px;
+        }
+    }
+}
+.center {
+    text-align: center;
+}
+.col-md-8 {
+    margin-bottom: 30px;
+}
+.post-list {
+    .post {
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+}
+.back-link {
+    margin-top: 20px;
+    text-align: right;
+}
+.breadcrumb {
+    background: none;
+    padding: 0;
+}
+.material-icons {
+    vertical-align: middle;
+    margin-top: -6px;
+}
+.row.justify-content-center {
+    margin-bottom: 20px;
+}
+
+.card-body > .post > li {
+    padding: 10px 0;
+    list-style: none;
+    + li {
+        border-top: 1px dashed #ccc;
+    }
+    a {
+        font-size: 18px;
+    }
+}
+.alert-dark {
+    color: #1b1e21;
+    background-color: #fff;
+    border-color: #c6c8ca;
+}
+
+
+.btn-like {
+    border: none;
+    background: none;
+    &:focus {
+        border: none;
+        outline: none;
+    }
+}
+.btn-wrap {
+    display: flex;
+    >*:last-child {
+        margin-left: 20px;
+    }
+}
+
+
+
+.btn-primary:hover {
+    background-color: #5f99d8;
+    border-color: #0062cc;
+}
+.btn-primary {
+    color: #fff;
+    background-color: #7bb5d8;
+    border-color: #6286ad;
+}
+
+.micro-copy {
+    font-size: 12px;
+    margin-bottom: 5px;
+}
+
+.footer-nav {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 10px;
+    justify-content: center;
+    font-size: 14px;
+    li + li {
+        margin-left: 20px;
+    }
+    a {
+        color: #fff;
+    }
+}
+footer {
+    background-color: #8ba6b7;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+/* ボタン全体 */
+.flowbtn12{
+font-family:'Verdana',sans-serif;	
+border-radius: 4px;
+display:inline-block;
+width:100%;
+font-size:20px;
+transition:.4s;	
+text-decoration:none;
+background: #fff;
+    &.widthauto {
+        width: 150px;
+        padding: 0 20px 0 15px;
+        text-align: center;
+    }
+}
+
+/* ボタン内テキストマウスホバー時 */
+.flowbtn12:hover{
+color:#fff!important;
+text-decoration:none;
+}
+/* Twitter */
+.flowbtn12.fl_tw2{
+border:solid 1px #55acee;
+color:#55acee;
+}
+/* Twitterマウスホバー時 */
+.flowbtn12.fl_tw2:hover{
+border:solid 1px #55acee;
+background:#55acee;
+}
+/* Instagram */
+.flowbtn12.insta_btn2{
+border:solid 1px #c6529a;
+color:#c6529a;
+}
+/* Instagramマウスホバー時 */
+.flowbtn12.insta_btn2:hover{
+border:solid 1px #c6529a;
+background:#c6529a;
+}
+/* Facebook */
+.flowbtn12.fl_fb2{
+border:solid 1px #3b5998;
+color:#3b5998;
+}
+/* Facebookマウスホバー時 */
+.flowbtn12.fl_fb2:hover{
+border:solid 1px #3b5998;
+background:#3b5998;
+}
+/* Feedly */
+.flowbtn12.fl_fd2{
+border:solid 1px #6cc655;
+color:#6cc655;
+}
+/* Feedlyマウスホバー時 */
+.flowbtn12.fl_fd2:hover{
+border:solid 1px #6cc655;
+background:#6cc655;
+}
+/* Pocket */
+.flowbtn12.fl_pk2{
+border:solid 1px #ef3f56;
+color:#ef3f56;
+}
+/* Pocketマウスホバー時 */
+.flowbtn12.fl_pk2:hover{
+border:solid 1px #ef3f56;
+background:#ef3f56;
+}
+/* はてブ */
+.flowbtn12.fl_hb2{
+border:solid 1px #1ba5dc;
+color:#1ba5dc;
+}
+/* はてブマウスホバー時 */
+.flowbtn12.fl_hb2:hover{
+border:solid 1px #1ba5dc;
+background:#1ba5dc;
+}
+/* YouTube */
+.flowbtn12.fl_yu2{
+border:solid 1px #fc0d1c;
+color:#fc0d1c;
+}
+/* YouTubeマウスホバー時 */
+.flowbtn12.fl_yu2:hover{
+border:solid 1px #fc0d1c;
+background:#fc0d1c;
+}
+/* LINE */
+.flowbtn12.fl_li2{
+border:solid 1px #00c300;
+color:#00c300;
+}
+/* LINEマウスホバー時 */
+.flowbtn12.fl_li2:hover{
+border:solid 1px #00c300;
+background:#00c300;
+}
+/* メールアイコン */
+.flowbtn12.fl_ma2{
+border:solid 1px #f3981d;
+color:#f3981d;
+}
+/* メールアイコンマウスホバー時 */
+.flowbtn12.fl_ma2:hover{
+border:solid 1px #f3981d;
+background:#f3981d;
+}
+/* プロフィールアイコン */
+.flowbtn12.fl_pf12{
+border:solid 1px #555;
+color:#555;
+}
+/* プロフィールアイコンマウスホバー時 */
+.flowbtn12.fl_pf12:hover{
+border:solid 1px #555;
+background:#555;
+}
+/* ボタン内テキスト調整 */
+.flowbtn12 span{
+font-size:14px;	
+position:relative;
+left:8px;
+bottom:2px;	
+}
+/* ulタグの内側余白を０にする */
+ul.snsbtniti2{
+padding:0!important;
+}
+/* ボタン全体の位置 */
+.snsbtniti2{
+margin-top:20px;
+display:flex;
+flex-flow:row wrap;
+justify-content: space-between;
+}
+/* ボタン同士の余白 */
+.snsbtniti2 li{
+flex-basis: 31.3%;
+text-align:center !important;
+}
+.sns-wrapper {
+    margin-top: 20px;
+    display: flex;
+    div {
+        text-align: center;
+        &+ div {
+            margin-left: 20px;
+        }
+    }
+}
