--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -68,6 +68,15 @@ header .bg-dark{
     }
 }
 .review-list {
+    > li {
+        padding: 10px;
+        + li {
+            border-top: 1px dashed #ccc;
+        }
+    }
+    h3 {
+        font-size: 18px;
+    }
     p {
         font-size: 16px;
     }
@@ -83,17 +92,19 @@ header .bg-dark{
         }
     }
 }
+
 .center {
     text-align: center;
 }
 .col-md-8 {
     margin-bottom: 30px;
 }
-.post-list {
-    .post {
-        text-overflow: ellipsis;
-        overflow: hidden;
-        white-space: nowrap;
+.agent-list {
+    .agent {
+        font-size: 18px;
+    }
+    .review {
+        font-size: 14px;
     }
 }
 .back-link {
