--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,6 +7,9 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
+$mainColor: #000;
+$subColor: #ffd200;
+$btnColor: #f23500;
 $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
