--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10930,6 +10930,7 @@ a.text-dark:focus {
 
 body {
   font-family: "Sawarabi Gothic";
+  background: #ffd200;
 }
 
 html {
@@ -10939,7 +10940,13 @@ html {
 }
 
 a {
-  color: #5384a2;
+  color: #000;
+  transition: 0.3s;
+}
+
+a:hover {
+  color: #ffd200;
+  text-decoration: none;
 }
 
 ul {
@@ -10970,11 +10977,19 @@ select {
 }
 
 header .bg-dark {
-  background-color: #8ba6b7 !important;
+  background-color: #000;
+}
+
+header .bg-dark .navbar-brand {
+  color: #ffd200;
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: #fff !important;
+  color: #ffd200;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: #fff;
 }
 
 .dropdown-item {
@@ -11003,6 +11018,14 @@ header .bg-dark {
   .main-image p {
     font-size: 24px;
   }
+}
+
+.card {
+  margin-top: 20px;
+}
+
+.card-body .label {
+  font-size: 18px;
 }
 
 .review-list > li {
@@ -11043,12 +11066,39 @@ header .bg-dark {
   margin-bottom: 30px;
 }
 
-.agent-list .agent {
+.agent-list {
   font-size: 18px;
+  padding-left: 30px;
+}
+
+.agent-list li {
+  margin-bottom: 40px;
+}
+
+.agent-list .quantity {
+  font-size: 14px;
 }
 
 .agent-list .review {
   font-size: 14px;
+}
+
+.card-body h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.agent-table th {
+  white-space: nowrap;
+}
+
+.agent-table th,
+.agent-table td {
+  padding: 10px;
+}
+
+.agent-table td {
+  padding-left: 40px;
 }
 
 .back-link {
@@ -11059,6 +11109,11 @@ header .bg-dark {
 .breadcrumb {
   background: none;
   padding: 0;
+}
+
+.breadcrumb a:hover {
+  color: #000;
+  text-decoration: underline;
 }
 
 .material-icons {
@@ -11107,15 +11162,24 @@ header .bg-dark {
   margin-left: 20px;
 }
 
-.btn-primary:hover {
-  background-color: #5f99d8;
-  border-color: #0062cc;
+.form-group.center {
+  text-align: center;
+}
+
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:focus {
+  opacity: 0.7;
+  color: #fff;
+  background-color: #f23500;
+  border-color: #f23500;
 }
 
 .btn-primary {
   color: #fff;
-  background-color: #7bb5d8;
-  border-color: #6286ad;
+  background-color: #f23500;
+  border-color: #f23500;
+  transition: 0.3s;
 }
 
 .micro-copy {
@@ -11137,12 +11201,12 @@ header .bg-dark {
 }
 
 .footer-nav a {
-  color: #fff;
+  color: #ffd200;
 }
 
 footer {
-  background-color: #8ba6b7;
-  color: #fff;
+  background-color: #000;
+  color: #ffd200;
   text-align: center;
   position: absolute;
   bottom: 0;
