--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10931,6 +10931,7 @@ a.text-dark:focus {
 body {
   font-family: "Sawarabi Gothic";
   background: #ffd200;
+  line-height: 1.6;
 }
 
 html {
@@ -10963,12 +10964,15 @@ img {
   text-align: center;
 }
 
-.sort {
-  text-align: right;
-}
-
 h2 {
   font-size: 26px;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 834px) {
+  h2 {
+    font-size: 18px;
+  }
 }
 
 select {
@@ -11029,7 +11033,7 @@ header .bg-dark .navbar-brand {
 }
 
 .review-list > li {
-  padding: 10px;
+  padding: 10px 0;
 }
 
 .review-list > li + li {
@@ -11044,14 +11048,21 @@ header .bg-dark .navbar-brand {
   font-size: 16px;
 }
 
+.review-list .review span {
+  color: #f23500;
+}
+
 .tag-list {
   display: flex;
+  flex-wrap: wrap;
+  margin-top: -20px;
 }
 
 .tag-list li {
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 5px;
+  margin-top: 20px;
 }
 
 .tag-list li + li {
@@ -11060,6 +11071,7 @@ header .bg-dark .navbar-brand {
 
 .center {
   text-align: center;
+  margin-top: 40px;
 }
 
 .col-md-8 {
@@ -11068,11 +11080,15 @@ header .bg-dark .navbar-brand {
 
 .agent-list {
   font-size: 18px;
-  padding-left: 30px;
+  padding-left: 0;
+  list-style: none;
 }
 
 .agent-list li {
-  margin-bottom: 40px;
+  list-style: none;
+  margin-bottom: 0;
+  padding: 20px 0;
+  border-top: 1px dashed #ccc;
 }
 
 .agent-list .quantity {
@@ -11083,9 +11099,23 @@ header .bg-dark .navbar-brand {
   font-size: 14px;
 }
 
+.agent-list .review span {
+  color: #f23500;
+}
+
+.agent-list .more {
+  text-align: right;
+  font-size: 16px;
+}
+
 .card-body h2 {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+}
+
+.result {
+  background: #ccc;
+  padding: 5px 10px;
 }
 
 .agent-table th {
@@ -11121,8 +11151,8 @@ header .bg-dark .navbar-brand {
   margin-top: -6px;
 }
 
-.row.justify-content-center {
-  margin-bottom: 20px;
+label + input {
+  margin-left: 10px;
 }
 
 .card-body > .post > li {
@@ -11164,6 +11194,7 @@ header .bg-dark .navbar-brand {
 
 .form-group.center {
   text-align: center;
+  margin-top: 40px;
 }
 
 .btn-primary:hover,
