--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -39,6 +39,7 @@ img {
 h2 {
     font-size: 26px;
     font-weight: bold;
+    line-height: 1.6;
     @media screen and (max-width: 834px) {
         font-size: 18px;
     }
@@ -190,10 +191,10 @@ header .bg-dark{
     vertical-align: middle;
     margin-top: -6px;
 }
-label + input {
-    margin-left: 10px;
-} 
-
+.form-group-parts {
+    margin-right: 10px;
+    white-space: nowrap;
+}
 .card-body > .post > li {
     padding: 10px 0;
     list-style: none;
