--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11043,6 +11043,8 @@ header .bg-dark .navbar-brand {
 
 .review-list h3 {
   font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 .review-list p {
@@ -11137,6 +11139,11 @@ header .bg-dark .navbar-brand {
   text-align: right;
 }
 
+.back-link a:hover {
+  color: #000;
+  opacity: 0.7;
+}
+
 .breadcrumb {
   background: none;
   padding: 0;
@@ -11174,6 +11181,10 @@ header .bg-dark .navbar-brand {
   color: #1b1e21;
   background-color: #fff;
   border-color: #c6c8ca;
+}
+
+.alert-danger {
+  background-color: #fff;
 }
 
 .btn-like {
