--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -100,6 +100,8 @@ header .bg-dark{
     }
     h3 {
         font-size: 18px;
+        font-weight: bold;
+        margin-bottom: 20px;
     }
     p {
         font-size: 16px;
@@ -178,6 +180,10 @@ header .bg-dark{
 .back-link {
     margin-top: 20px;
     text-align: right;
+    a:hover {
+        color: #000;
+        opacity: .7;
+    }
 }
 .breadcrumb {
     background: none;
@@ -210,7 +216,9 @@ header .bg-dark{
     background-color: #fff;
     border-color: #c6c8ca;
 }
-
+.alert-danger {
+    background-color: #fff;
+}
 
 .btn-like {
     border: none;
