--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -114,6 +114,10 @@ header .bg-dark{
     display: flex;
     flex-wrap: wrap;
     margin-top: -20px;
+    @media screen and (max-width: 834px) {
+        display: block;
+        margin-top: 0;
+    }
     li {
         border: 1px solid #ccc;
         border-radius: 4px;
@@ -121,6 +125,19 @@ header .bg-dark{
         margin-top: 20px;
         + li {
             margin-left: 10px;
+        }
+        @media screen and (max-width: 834px) {
+            margin-top: 5px;
+            padding-left: 0;
+            border: none;
+            span {
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                padding: 5px;
+            }
+            + li {
+                margin-left: 0;
+            }
         }
     }
 }
@@ -136,7 +153,7 @@ header .bg-dark{
     font-size: 18px;
     padding-left: 0;
     list-style: none;
-    li {
+    > li {
         list-style: none;
         margin-bottom: 0;
         padding: 20px 0;
@@ -147,6 +164,9 @@ header .bg-dark{
     }
     .review {
         font-size: 14px;
+        &.no-review {
+            margin-top: 20px;
+        }
         span {
             color: $btnColor;
         }
@@ -156,6 +176,15 @@ header .bg-dark{
         font-size: 16px;
     }
 }
+.material-icons.check {
+    color: #ffd200;
+    margin-right: 7px;
+    font-size: 19px;
+}
+.quantity {
+    display: flex;
+}
+
 .card-body {
     h2 {
         text-align: center;
@@ -176,6 +205,15 @@ header .bg-dark{
     }
     td {
         padding-left: 40px;
+        @media screen and (max-width: 834px) {
+            padding-left: 0;
+        }
+    }
+    br {
+        display: none;
+        @media screen and (max-width: 834px) {
+            display: block;
+        }        
     }
 }
 .back-link {
